[project]
name = "get-email-records"
version = "0.1.0"
description = "CLI tool to query email_records from Supabase"
requires-python = ">=3.12"
dependencies = [
    "supabase>=2.28.0",
]

[project.scripts]
get-email-records = "get_email_records:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
